# BE_AI_Stock_Trend_Prediction

./: .gitignore  ANALYSE_FIX_LEADERSHIP_MARKET_CAFEF_FINANCIAL_REPORT.md  ANALYSE_HTML_REPORT_EXPORT_FIX_REPORT.md  ANALYSE_MERGE_IMPLEMENTATION_REPORT.md  ANALYSE_REPORT_EXPORT_AND_RESEARCH_IMPLEMENTATION_REPORT.md  ANALYSE_RUN_GUIDE_REPORT.md  ANALYSE_SOURCE_CODE_REPORT.md  ANALYSE_USE_API_ANALYSIS_DATA_AND_SCORING_FIX_REPORT.md  API_ANALYSE_DATA_CONTRACT_AND_NULL_FIELDS_REPORT.md  API_RUN_GUIDE_REPORT.md  FULL_PROJECT_STOCK_ENDPOINT_500_FIX_REPORT.md  PROJECT_DOCUMENTATION.md  README.md
analyse/: .env.example  .gitignore  README.md  env_example  pyproject.toml  requirements.txt  run.py
analyse/docs/: ANALYSE_PROJECT_FLOW_AND_USAGE_REPORT.md
analyse/migrations/sqlserver/: 001_create_ai_report_histories.sql
analyse/src/analyse/: __init__.py  app.py  main.py
analyse/src/analyse/api/: __init__.py  controllers.py  dependencies.py  routes.py
analyse/src/analyse/clients/: __init__.py  backend_client.py  http_client.py  openai_client.py
analyse/src/analyse/config/: __init__.py  openai_config.py  settings.py
analyse/src/analyse/constants/: __init__.py  analysis_constants.py
analyse/src/analyse/db/: __init__.py  models.py  session.py
analyse/src/analyse/examples/: sample_analyse_one_request.json  sample_analysis_result.json  sample_stock_request.json  sample_watchlist_request.json
analyse/src/analyse/prompts/: __init__.py  json_schema_prompts.py  (+7 more)
analyse/tests/: README.md  __init__.py  test_ai_report_history.py  test_analyse_one_flow.py  test_asyncio_windows.py  test_backend_client.py  test_cafef_adapters.py  test_datetime_utils.py  test_debug_scrub.py  test_endpoint_contract.py  test_external_research.py  test_financial_source_merge_service.py  test_force_llm_forecast_sections.py  test_numeric_fact_validation_service.py  test_peer_enrichment.py  test_phase5_service_skeletons.py  test_placeholder.py  test_playwright_safe.py  test_presentation_contract.py  test_provider_factory.py  test_report_assembly_service.py  test_report_debug_service.py  test_report_file_service.py  test_report_presentation_contract.py  test_report_presentation_missing_fields.py  test_report_renderers.py  test_report_schema.py  test_report_status_service.py  test_schemas.py  test_settings.py  test_source_backed_research_pipeline.py  test_source_collection_coordinator.py  test_source_collection_source_backed.py  test_summary_scoring.py  test_vietstock_financial_adapter.py  test_vietstock_peer_adapter.py  test_visualization_dataset_service.py  test_visualization_routes.py  test_visualization_signed_urls.py
crawler/: .gitignore  README.md  crawl_financials_by_quarter.py  inspect_db.py  manual_crawl_by_date.py  manual_crawl_by_date_improved.py  market_overview_crawler.py  pyproject.toml  requirements.txt  run.py  seed_all_hose_stocks.py
crawler/docs/: ARCHITECTURE.md  CONFIGURATION.md  GOOGLE_SHEETS_SETUP.md
crawler/scripts/: init_market_overviews_from_json.py  market_overview_crawler.py  migrate_market_overviews.py
crawler/src/vietstock_crawler/: app.py
crawler/tests/: test_number_utils.py  test_parsers.py  test_retry_queue.py  test_text_utils.py  test_url_utils.py
(+229 files in other folders)
