[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analyse"
version = "0.1.0"
description = "Python AI/LLM analysis scaffold for Vietnamese stock data."
requires-python = ">=3.11"
authors = [{ name = "BE_AI_Stock_Trend_Prediction" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "openai",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
