[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analyse"
version = "0.2.0"
description = "Python/FastAPI AI analysis service for Vietnamese stock reports with Gemini/OpenAI provider layer."
requires-python = ">=3.11"
authors = [{ name = "BE_AI_Stock_Trend_Prediction" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "openai",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
