[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "analyse"
version = "0.2.0"
description = "Python/FastAPI AI analysis service for Vietnamese stock reports with Gemini/OpenAI provider layer."
requires-python = ">=3.11"
authors = [{ name = "BE_AI_Stock_Trend_Prediction" }]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "openai",
    "google-genai",
    "playwright",
    "sqlalchemy",
    "pyodbc",
    "pytest",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "mypy",
    "vulture",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".data_formulator",
    ".research_cache",
    ".venv",
    "assets/echarts.min.js",
    "reports",
    "storage",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.vulture]
exclude = [
    ".data_formulator",
    ".research_cache",
    ".venv",
    "reports",
    "storage",
]
min_confidence = 80

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
exclude = "(.venv|.data_formulator|.research_cache|reports|storage)"
